# Trust_Pipeline_CI

./: .bandit  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  ruff.toml
.github/workflows/: ci.yml
dashboard/: README.md  app.py  design_system.py  requirements.txt
dashboard/.streamlit/: config.toml  pages.toml
dashboard/components/: charts.py  db.py  filters.py
dashboard/pages/: 1_Revenue_Overview.py  2_Consent_Impact.py  3_Metric_Health.py  4_FX_Impact.py  5_Consent_Forecast.py
data_generator/: config_small.yaml  generate.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: consent_aware_sum.sql  safe_divide.sql
dbt_project/seeds/: _seeds.yml  consent_forecast_predictions.csv  fx_rates_daily.csv  raw_customers.csv  raw_events.csv  raw_order_items.csv  raw_orders.csv  raw_products.csv
dbt_project/tests/: assert_revenue_reconciliation.sql
docs/architecture/: decisions.md
docs/metric_definitions/: metrics.md
docs/postmortems/: 001-revenue-metric-drift.md
ds_models/: requirements.txt
ds_models/consent_forecast/: __init__.py  __main__.py  cli.py  evaluate.py  features.py  model.py  output.py  scenarios.py
fx_ingestion/: fetch_rates.py  requirements.txt
redesigned/: README.md  app.py  design_system.py
redesigned/.streamlit/: config.toml
redesigned/pages/: 1_Main.py  1_Revenue_Overview.py  4_FX_Impact.py  (+3 more)
semantic_ci/: README.md  pyproject.toml
semantic_ci/semantic_ci/: __init__.py  cli.py  diff.py  gate.py  report.py  snapshot.py
semantic_ci/tests/: test_diff.py  test_gate.py  test_report.py  test_snapshot.py
(+18 files in other folders)
