[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-ci"
version = "0.1.0"
description = "Metric regression testing for dbt projects. Snapshot metrics, diff on PRs, gate deployments."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Zahar Chikmarev"}
]
keywords = ["dbt", "metrics", "ci", "data-quality", "analytics-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.0",
    "duckdb>=0.9",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
bigquery = ["google-cloud-bigquery>=3.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
semantic-ci = "semantic_ci.cli:cli"

[project.urls]
Homepage = "https://github.com/zachikmarev/metric-trust-pipeline"
Issues = "https://github.com/zachikmarev/metric-trust-pipeline/issues"

[tool.setuptools.packages.find]
include = ["semantic_ci*"]
